# cytoflow

./: .classpath  .gitattributes  .gitignore  .gitmodules  .project  .pydevproject  .readthedocs.yaml  .travis.yml  CHANGES.md  Gemfile  ISSUE_TEMPLATE.md  LICENSE.txt  MANIFEST.in  README.md  README.rst  _config.yml  appveyor.yml  appveyor.yml.old  debug.flow  environment-ci.yml  environment.yml  goals  hook-pyface.py  hook-traitsui.py  index.html  index.md  installer.nsis  mpl_plugin.py  nose2.cfg  nose_plugins.py  operations.py  params.json  pyinstaller.spec  pyproject.toml  requirements.txt  screenshots.md  setup.cfg  setup.py  synbio_flow.py  synbio_model.py  (+4 more)
.github/workflows/: create-release-linux.yml  create-release-macos-arm.yml  create-release-macos.yml  create-release-windows.yml  create-release.yml  test-and-package-linux.yml  test-and-package-macos-arm.yml  test-and-package-macos.yml  test-and-package-windows.yml  test-and-package.yml
CFCS/: README.txt
CFCS/.svn/: entries
FACEJava/: .classpath  .project  FACEFlow.README.txt  README.txt  READMEfaceJava.txt  build.xml
GvHD/: annotation.txt
_includes/: .README.md.swp  .page-header.html.swp  README.md  page-header.html
appveyor/: install.ps1
cytoflow/: __init__.py  _version.py  experiment.py
cytoflow/operations/: 2drange.py  __init__.py  autofluorescence.py  base_dimensionality_reduction_op.py  base_op_views.py  bead_calibration.py  beads.csv  binary.py  binning.py  bleedthrough_linear.py  bleedthrough_piecewise.py  bulk_condition_op.py  category.py  centroid.py  channel_stat.py  color_translation.py  density.py  external_label.py  flowclean.py  flowpeaks.py  frame_stat.py  gaussian.py  gaussian_1d.py  gaussian_2d.py  hdbscan.py  hierarchy.py  hlog.py  i_operation.py  import_op.py  kmeans.py  log.py  logicle.py  mst.py  pca.py  polygon.py  quad.py  range.py  range2d.py  ratio.py  register.py  (+10 more)
cytoflow/scripts/: channel_voltages.py  fcs_metadata.py  parse_beads.py  split_fcs.py
cytoflow/tests/: autofluorescence.py  bead_calibration.py  binning.py  bleedthrough_piecewise.py  color_translation.py  experiment.py  hlog.py  logicle.py  mpl_nose_plugin.py  nose_setup.py  polygon.py  range.py  test_autofluorescence.py  test_barchart.py  test_base.py  test_basic_views.py  test_bead_calibration.py  test_binary.py  test_binning.py  test_bleedthrough_linear.py  test_bleedthrough_piecewise.py  test_bulk_condition_op.py  test_category.py  test_channel_stat.py  test_color_translation.py  test_density_op.py  test_densityplot.py  test_experiment.py  test_export.py  test_external_label_op.py  test_flowclean.py  test_flowpeaks.py  test_frame_stat.py  test_gaussian.py  test_gaussian_1d.py  test_gaussian_2d.py  test_hdbscan.py  test_hierarchy.py  test_histogram.py  test_histogram_2d.py  (+31 more)
cytoflow/utility/: __init__.py  algorithms.py  consensus.py  consensus_cluster.py  custom_traits.py  cytoflow_errors.py  docstring.py  fcswrite.py  hlog_scale.py  i_scale.py  kneed.py  linear_scale.py  log_scale.py  logging.py  logging_ext.py  logicle_scale.py  matplotlib_widgets.py  minisom.py  scale.py  util.py  util_functions.py
cytoflow/views/: __init__.py  autofluorescence_diag.py  bar_chart.py  base_views.py  densityplot.py  export_fcs.py  heatmap.py  hexbin.py  histogram.py  histogram_2d.py  i_selectionview.py  i_view.py  kde_1d.py  kde_2d.py  logicle_scale.py  long_table.py  matrix.py  mst.py  parallel_coords.py  petal.py  pie.py  poly_selection.py  radviz.py  range_selection.py  range_selection_2d.py  scatterplot.py  sns_axisgrid.py  star.py  stats_1d.py  stats_2d.py  (+5 more)
cytoflowgui/: __init__.py  clearable_enum_editor.py  color_text_editor.py  cytoflow_application.py  cytoflowgui.spec  event_tracer.py  example_panes.py  example_task.py  experiment_dialog.py  experiment_pane.py  experiment_pane_model.py  experiment_subset.py  export_task.py  ext_enum_editor.py  flow_task.py  flow_task_pane.py  help_pane.py  import_data.py  import_dialog.py  import_workflow_item.py  ipython.py  mailto.py  matplotlib_backend.py  matplotlib_backend_local.py  matplotlib_backend_remote.py  matplotlib_editor.py  matplotlib_multiprocess_backend.py  multiprocess_logging.py  notebook.py  op_factory.py  preferences.ini  preferences.py  range_slider.py  run.py  serialization.py  subset.py  subset_controllers.py  subset_editor.py  subset_editors.py  subset_model.py  (+22 more)
doc/: DESIGN  TODO.rst  conf.py  cytoflow.operations.logicle_ext.rst  cytoflow.rst  cytoflow.utility.rst  dependencies.txt  design.rst  index.rst
docs/: .gitignore  INSTALL.rst  Makefile  RELEASE.rst  TODO.rst  conf-online.py  conf.py  cytoflow.operations.rst  cytoflow.rst  cytoflow.scripts.rst  cytoflow.utility.logicle_ext.rst  cytoflow.utility.rst  cytoflow.views.rst  cytoflowgui.op_plugins.rst  cytoflowgui.rst  cytoflowgui.view_plugins.rst  design.rst  environment-rtd.yml  index.rst  make.bat  manual.rst  modules.rst  new_module.rst  new_modules.rst  packaging.rst  requirements_rtd.txt
package/: AdvUninstLog.nsh  bintray.json  cytoflow.desktop  environment-build.yml  environment-docs.yml  hook-matplotlib.backends.py  installer.nsis  make_environment.awk  move_conda_package.py  nose2.cfg  nose_setup.py  parse_environment.awk  pyinstaller.spec  rename.py  rthook_qtapi.py  rthook_qtconf.py  set_launcher_icon
packaging/: UnInstallLog.nsh  appveyor.yml  bintray-linux-x86_64.json  bintray.json  conda-requirements.txt  deploy_anaconda.sh  hook-PyQt4.py  hook-matplotlib.backends.py  hook-nbformat.v4.py  hook-numpy.core.py  hook-numpy.py  hook-pandas.py  hook-pkg_resources.py  hook-pyface.py  hook-pytz.py  hook-scipy.py  hook-sklearn.py  hook-traits.py  hook-traitsui.py  installer.nsis  make-bintray.py  move_conda_package.py  mpl_plugin.py  nose2.cfg  pyinstaller-local.py  pyinstaller.spec  rename.py  rthook_multiprocessing.py  rthook_override_pyface_qt.py  rthook_qt5webengine.py  rthook_qtapi.py  rthook_qtconf.py  travis-install-platform.sh
pyinstaller/: hook-PyQt4.py  hook-numpy.py  hook-pyface.py  rthook_override_pyface_qt.py  rthook_qtapi.py
src/: synbio_model.py  synbio_ui.py  tester.py
(+1103 files in other folders)
