# build configuration is now split across three files: pyproject.toml,

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "cytoflow"
authors = [{name = "Brian Teague", email = "bpteague@gmail.com"}]
description = "Python tools for quantitative, reproducible flow cytometry analysis"
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["flow", "cytometry", "scipy"]

dynamic = ["version"]

requires-python = ">= 3.11"

dependencies = [
    'numpy==2.2.5',
    'pandas==2.2.3',
    'matplotlib==3.10.0',
    'bottleneck==1.4.2',
    'numexpr==2.10.1',
    'scipy==1.15.3',
    'scikit-learn==1.6.1',
    'seaborn==0.13.2',
    'statsmodels==0.14.4',
    'natsort==7.1.1',
    'numba==0.61.2',
    'opentsne==1.0.2',
    'python_igraph==0.11.9',
    'scikit-fda==0.10.1',
                
    'traits==7.0.2',
    'traitsui==8.0.0',
    'pyface==8.0.0',
    'envisage==7.0.4',
    'nbformat==5.10.4',
    'python-dateutil==2.9.0post0',
    'importlib_resources==6.4.0',
   
     # pyqt, qt are not in pip
     # need to install through your package manager

      'camel==0.1.2',
      'yapf==0.40.2'
]

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Environment :: MacOS X',
    'Environment :: Win32 (MS Windows)',
    'Environment :: X11 Applications :: Qt',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: GNU General Public License v2 (GPLv2)',
    'Natural Language :: English',
    'Operating System :: MacOS',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: Implementation :: CPython',
    'Topic :: Scientific/Engineering :: Bio-Informatics',
    'Topic :: Software Development :: Libraries :: Python Modules'
]

[project.urls]
Homepage = "https://cytoflow.github.io"
Documentation = "https://cytoflow.readthedocs.org"
Repository = "https://github.com/cytoflow/cytoflow"
Issues = "https://github.com/cytoflow/cytoflow/issues"


[project.scripts]
cf-channel_voltages = 'cytoflow.scripts.channel_voltages:main'
cf-fcs_metadata = 'cytoflow.scripts.fcs_metadata:main'
cf-split_fcs = 'cytoflow.scripts.split_fcs:main'

[project.gui-scripts]
cytoflow = 'cytoflowgui.run:run_gui'

[tool.setuptools]

[[tool.setuptools.ext-modules]]
name = "cytoflow.utility.logicle_ext._Logicle"
sources = ["cytoflow/utility/logicle_ext/FastLogicle.cpp",
           "cytoflow/utility/logicle_ext/Logicle.cpp",
           "cytoflow/utility/logicle_ext/Logicle.i"]
depends = ["cytoflow/utility/logicle_ext/FastLogicle.cpp",
           "cytoflow/utility/logicle_ext/Logicle.cpp",
           "cytoflow/utility/logicle_ext/Logicle.i",
           "cytoflow/utility/logicle_ext/logicle.h"]
swig-opts=['-c++', '-python']
optional = true

[tool.setuptools.packages.find]
exclude = ["package", "package.qt"]

[tool.setuptools.package-data]
cytoflowgui = ['preferences.ini',
               'images/*',
               'op_plugins/images/*',
               'view_plugins/images/*',
               'editors/images/*',
               'help/operations/*.html',
               'help/views/*.html',
               'help/_images/*.png',
               'help/_static/*']
               
               
[tool.setuptools_scm]





