# build configuration is now split across three files: pyproject.toml,

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "cytoflow"
authors = [{name = "Brian Teague", email = "bpteague@gmail.com"}]
description = "Python tools for quantitative, reproducible flow cytometry analysis"
readme = "README.md"
license = "GPL-2.0-or-later"
keywords = ["flow", "cytometry", "scipy"]

dynamic = ["version"]

requires-python = ">= 3.13"

dependencies = [
    'numpy',
    'pandas',
    'matplotlib',
    'bottleneck',
    'numexpr',
    'scipy',
    'scikit-learn',
    'seaborn',
    'statsmodels',
    'natsort',
    'numba',
    'opentsne',
    'python-igraph',
    'scikit-fda',
                
    'traits',
    'traitsui',
    'pyface',
    'envisage',
    'nbformat',
    'python-dateutil',
    'importlib_resources',
       
     # pyqt, qt, qtwebengine are not in pip
     # need to install through your package manager
     # must be versions 5.15.*

      'camel',
      'yapf'
]

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Environment :: MacOS X',
    'Environment :: Win32 (MS Windows)',
    'Environment :: X11 Applications :: Qt',
    'Intended Audience :: Science/Research',
    'Natural Language :: English',
    'Operating System :: MacOS',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: Implementation :: CPython',
    'Topic :: Scientific/Engineering :: Bio-Informatics',
    'Topic :: Software Development :: Libraries :: Python Modules'
]

[project.urls]
Homepage = "https://cytoflow.github.io"
Documentation = "https://cytoflow.readthedocs.org"
Repository = "https://github.com/cytoflow/cytoflow"
Issues = "https://github.com/cytoflow/cytoflow/issues"


[project.scripts]
cf-channel_voltages = 'cytoflow.scripts.channel_voltages:main'
cf-fcs_metadata = 'cytoflow.scripts.fcs_metadata:main'
cf-split_fcs = 'cytoflow.scripts.split_fcs:main'

[project.gui-scripts]
cytoflow = 'cytoflowgui.run:run_gui'

[tool.setuptools]

[[tool.setuptools.ext-modules]]
name = "cytoflow.utility.logicle_ext._Logicle"
sources = ["cytoflow/utility/logicle_ext/FastLogicle.cpp",
           "cytoflow/utility/logicle_ext/Logicle.cpp",
           "cytoflow/utility/logicle_ext/Logicle.i"]
depends = ["cytoflow/utility/logicle_ext/FastLogicle.cpp",
           "cytoflow/utility/logicle_ext/Logicle.cpp",
           "cytoflow/utility/logicle_ext/Logicle.i",
           "cytoflow/utility/logicle_ext/logicle.h"]
swig-opts=['-c++']
optional = true

[tool.setuptools.packages.find]
exclude = ["package", "package.qt"]

[tool.setuptools.package-data]
cytoflowgui = ['preferences.ini',
               'images/*',
               'op_plugins/images/*',
               'view_plugins/images/*',
               'editors/images/*',
               'help/operations/*.html',
               'help/views/*.html',
               'help/_images/*.png',
               'help/_static/*']
               
               
[tool.setuptools_scm]





